# data-with-gcp

./: LICENSE  README.md
bq-dbt-mart/: README.md  pyproject.toml
bq-dbt-mart/activities/: 01-setup-env.md  02-dbt-for-external-tables.md  03-01-working-set-tables.md  03-02-source-data-model.md  04-01-make-ing-it-work.md  README.md
bq-dbt-mart/notebooks/: source-data.ipynb
bq-dbt-mart/sample-files/: sample-bq-dbt-mart.env  sample-profiles.yml  thelook-data-model.md
bq-dbt-mart/sample_bq_dbt_mart/: Makefile  dbt_project.yml
bq-dbt-mart/sample_bq_dbt_mart/analyses/: users_count.sql  users_daily_eod_delta.sql  users_daily_full_refresh.sql
bq-dbt-mart/sample_bq_dbt_mart/macros/utils/: set_partition_keys.sql
bq-dbt-mart/sample_bq_dbt_mart/models/sources/: sources.yml
bq-dbt-mart/sample_bq_dbt_mart/models/staging/: sources.yml
bq-dbt-mart/sample_bq_dbt_mart/models/staging/thelook/ws/: users_ws.sql
bq-external-tables/: README.md  pyproject.toml
bq-external-tables/data/: fake_txn_data-01.csv  fake_txn_data-02.csv
bq-external-tables/notebooks/: my-first-notebook.ipynb
bq-external-tables/src/: create_fake_csv_data.py
bq-external-tables/src/sql/: 01_purchase_txn_ext.sql  02_purchase_txn_tx.sql  03_purchase_txn.sql  04_purchase_txn_loader.sql
