[tool.poetry]
name = "bq-external-tables"
version = "0.1.0"
description = "Examples and samples using BigQuery external tables"
authors = ["None"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/"}]

[tool.poetry.dependencies]
python = "^3.9"
faker = "^19.6.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.8"
google-cloud-bigquery = {extras = ["pandas"], version = "^3.13.0"}
google-cloud-bigquery-storage = "^2.22.0"
tqdm = "^4.66.1"
seaborn = "^0.13.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
